--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -7,9 +7,12 @@
  */
 
 //MARK: - LocationsListTableViewController
-LocationsListTVC_TableViewSectionHeader = "Aktuelles Wetter von Städten im Umkreis";
+LocationsListTVC_TableViewSectionHeader1 = "Aktuelles Wetter in Ihrer Favorisierten Stadt";
+LocationsListTVC_TableViewSectionHeader2 = "Aktuelles Wetter von Städten im Umkreis";
+
 LocationsListTVC_RefreshPullHandle = "Zum Aktualisieren herunterziehen";
-LocationsListTVC_LocationAlert_Title = "Kein Zugriff auf den aktuelle Ort";
+
+LocationsListTVC_LocationAlert_Title = "Kein Zugriff auf den aktuellen Ort";
 LocationsListTVC_LocationAlert_Message = "Um Wetter Daten für Städte in Ihrer Nähe bereitzustellen, benötigt NearbyWeather Ihren Standort. Sie haben diesen für die App nicht freigegeben. Dies kann in den Einstellungen verändert werden. Während Ihr Standort nicht bestimmt werden kann, werden Beispiel-Koordinaten verwendet.";
 LocationsListTVC_LocationAlert_Action1 = "Verwerfen";
 LocationsListTVC_LocationAlert_Action2 = "Einstellungen";
@@ -23,9 +26,10 @@ LocationsListTVC_BackButtonTitle = "Zurück";
 //MARK: - SettingsTableViewController
 SettingsTVC_NavigationBarTitle = "Einstellungen";
 
-SettingsTVC_SectionTitle1 = "Anzahl der Such-Ergebnisse";
-SettingsTVC_SectionTitle2 = "Temperatur Einheit";
-SettingsTVC_SectionTitle3 = "Legende";
+SettingsTVC_SectionTitle1 = "Ihre Favorisierte Stadt";
+SettingsTVC_SectionTitle2 = "Anzahl der Such-Ergebnisse";
+SettingsTVC_SectionTitle3 = "Temperatur Einheit";
+SettingsTVC_SectionTitle4 = "Legende";
 
 SettingsTVC_Legend_Temperature = "🌡 -> Temperatur";
 SettingsTVC_Legend_CloudCover = "☁️ -> Wolkendichte/Wolkenbedeckung";
@@ -33,3 +37,8 @@ SettingsTVC_Legend_Humidity = "💧 -> Luftfeuchtigkeit";
 SettingsTVC_Legend_WindSpeed = "💨 -> Windgeschwindigkeit";
 
 SettingsTVC_Results = "Ergebnisse";
+
+//MARK: - SettingsInputTableViewController
+SettingsInputTVC_NavigationBarTitle = "Stadt Wählen";
+
+InputSettingsTVC_SectionTitle = "Wählen Sie Ihre Favorisierte Stadt";
