--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -6,9 +6,28 @@
  Copyright © 2016 Erik Maximilian Martens. All rights reserved.
  */
 
-//MARK: - LocationsListTableViewController
-LocationsListTVC_TableViewSectionHeader1 = "Aktuelles Wetter in Ihrer Favorisierten Stadt";
-LocationsListTVC_TableViewSectionHeader2 = "Aktuelles Wetter von Städten im Umkreis";
+
+// MARK: - WelcomeScreenViewController
+
+WelcomeScreenVC_NavigationBarTitle = "Willkommen";
+
+WelcomeScreenVC_Description = "Bitte gib deinen Open Weather Map API Schlüssel ein. Du kannst ihn später in den Einstellungen verändern.";
+WelcomeScreenVC_SaveButtonTitle = "Sichern";
+WelcomeScreenVC_GetInstructionsButtonTitle = "Du hast keinen Schlüssel?";
+
+
+// MARK: - SetPermissionsViewController
+
+SetPermissionsVC_NavigationBarTitle = "Ortsdaten Zugriff";
+
+SetPermissionsVC_Description = "Um alle Funktionen von NearbyWeather zu nutzen und Wetter Daten für Städte in der Umgebung zu erhalten, benötigt NearbyWeather Zugriff auf deine Ortsdaten. Falls du den Zugriff nicht genehmigst, werden Beispiel-Daten verwendet.";
+SetPermissionsVC_AskPermissionsButtonTitle = "Konfigurieren";
+
+
+// MARK: - NearbyLocationsTableViewController
+
+LocationsListTVC_TableViewSectionHeader1 = "Wetter in Favorisierter Stadt";
+LocationsListTVC_TableViewSectionHeader2 = "Wetter in Nahegelegenen Städten";
 
 LocationsListTVC_RefreshPullHandle = "Zum Aktualisieren herunterziehen";
 
@@ -23,22 +42,54 @@ LocationsListTVC_SortAlert_Action2 = "Nach Temperatur sortieren";
 
 LocationsListTVC_BackButtonTitle = "Zurück";
 
-//MARK: - SettingsTableViewController
+LocationsListTVC_AlertNoData = "Es konnten keine Daten geladen werden. Gehe sicher, dass du eine Netzwerkverbindung hast und dein API Key korrekt eingegeben ist.";
+
+
+// MARK: - InfoTableViewController
+
+InfoTVC_NavigationItemTitle = "Über";
+
+InfoTVC_TableViewSectionHeader2 = "Legende";
+InfoTVC_TableViewSectionHeader3 = "Ressourcen";
+InfoTVC_TableViewSectionHeader4 = "Mitwirkende";
+InfoTVC_TableViewSectionHeader5 = "Erwähnungen";
+
+InfoTVC_TableViewSectionFooter5 = "Info Icon, Sortier Icon, Einstellungs Icon";
+
+InfoTVC_AppTitle = "NearbyWeather - Open Source Wetter";
+InfoTVC_AppVersion = "Version 1.1 Build #3";
+
+InfoTVC_Support = "Support";
+InfoTVC_Source = "Quellcode";
+InfoTVC_Icons = "Icons via";
+
+InfoTVC_Legend_Temperature = "🌡 Temperatur";
+InfoTVC_Legend_CloudCover = "☁️ Wolkenbedeckung";
+InfoTVC_Legend_Humidity = "💧 Luftfeuchtigkeit";
+InfoTVC_Legend_WindSpeed = "💨 Windgeschwindigkeit";
+
+
+// MARK: - SettingsTableViewController
+
+SettingsTVC_BackButtonTitle = "Wetter";
+
 SettingsTVC_NavigationBarTitle = "Einstellungen";
 
-SettingsTVC_SectionTitle1 = "Ihre Favorisierte Stadt";
-SettingsTVC_SectionTitle2 = "Anzahl der Such-Ergebnisse";
-SettingsTVC_SectionTitle3 = "Temperatur Einheit";
-SettingsTVC_SectionTitle4 = "Legende";
-
-SettingsTVC_Legend_Temperature = "🌡 -> Temperatur";
-SettingsTVC_Legend_CloudCover = "☁️ -> Wolkendichte/Wolkenbedeckung";
-SettingsTVC_Legend_Humidity = "💧 -> Luftfeuchtigkeit";
-SettingsTVC_Legend_WindSpeed = "💨 -> Windgeschwindigkeit";
+SettingsTVC_SectionTitle1 = "Favorisierte Stadt";
+SettingsTVC_SectionTitle2 = "Open Weather Map API Schlüssel";
+SettingsTVC_SectionTitle3 = "Anzahl der Such-Ergebnisse";
+SettingsTVC_SectionTitle4 = "Temperatur Einheit";
+SettingsTVC_SectionTitle5 = "Legende";
 
 SettingsTVC_Results = "Ergebnisse";
 
-//MARK: - SettingsInputTableViewController
-SettingsInputTVC_NavigationBarTitle = "Stadt Wählen";
 
-InputSettingsTVC_SectionTitle = "Wählen Sie Ihre Favorisierte Stadt";
+// MARK: - SettingsInputTableViewController
+
+SettingsInputTVC_NavigationBarTitle_Mode_EnterFavoritedLocation = "Stadt Einstellen";
+SettingsInputTVC_NavigationBarTitle_Mode_EnterAPIKey = "API Einstellen";
+
+InputSettingsTVC_SectionTitle_Mode_EnterFavoritedLocation = "Gib eine Städte Namen ein";
+InputSettingsTVC_SectionTitle_Mode_EnterAPIKey = "Gib deinen API Schlüssel ein";
+
+InputSettingsTVC_SectionFooter_Mode_EnterAPIKey = "Der API Schlüssel hat eine Länge von genau 32 Zeichen.";
