added used libraries to info screen

--- a/NearbyWeather/Base.lproj/Localizable.strings
+++ b/NearbyWeather/Base.lproj/Localizable.strings
@@ -52,6 +52,7 @@ InfoTVC_NavigationItemTitle = "About";
 InfoTVC_TableViewSectionHeader2 = "Legend";
 InfoTVC_TableViewSectionHeader3 = "Resources";
 InfoTVC_TableViewSectionHeader4 = "Contributors";
+InfoTVC_TableViewSectionHeader5 = "Libraries";
 
 InfoTVC_AppTitle = "NearbyWeather - Open Source Weather";
 InfoTVC_AppVersion = "Version 1.2 Build #6";
