--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -52,6 +52,7 @@ InfoTVC_NavigationItemTitle = "Über";
 InfoTVC_TableViewSectionHeader2 = "Legende";
 InfoTVC_TableViewSectionHeader3 = "Ressourcen";
 InfoTVC_TableViewSectionHeader4 = "Mitwirkende";
+InfoTVC_TableViewSectionHeader5 = "Bibliotheken";
 
 InfoTVC_AppTitle = "NearbyWeather - Open Source Wetter";
 InfoTVC_AppVersion = "Version 1.2 Build #6";
