--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -42,7 +42,7 @@ LocationsListTVC_SortAlert_Action2 = "Nach Temperatur sortieren";
 
 LocationsListTVC_BackButtonTitle = "Zurück";
 
-LocationsListTVC_AlertNoData = "Es konnten keine Daten geladen werden. Gehe sicher, dass du eine Netzwerkverbindung hast und dein API Key korrekt eingegeben ist.";
+LocationsListTVC_AlertNoData = "Es konnten keine Daten geladen werden. Gehe sicher, dass du eine Netzwerkverbindung hast, dein API Key korrekt eingegeben ist und deine favorisierte Stadt existiert.";
 
 
 // MARK: - InfoTableViewController
