--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -42,7 +42,9 @@ LocationsListTVC_SortAlert_Action2 = "Nach Temperatur sortieren";
 
 LocationsListTVC_BackButtonTitle = "Zurück";
 
-LocationsListTVC_AlertNoData = "Es konnten keine Daten geladen werden. Gehe sicher, dass du eine Netzwerkverbindung hast, dein API Key korrekt eingegeben ist und deine favorisierte Stadt existiert.";
+LocationsListTVC_AlertNoData = "Es konnten keine Daten geladen werden. Gehe sicher, dass du eine Netzwerkverbindung hast und dein API Schlüssel korrekt eingegeben ist.";
+LocationsListTVC_AlertIncorrectFavoritedCity = "Es konnte keine Daten für die eingebene Stadt gefunden werde. Gehe sicher, dass der Name richtig geschrieben ist und diese Stadt existier.";
+LocationsListTVC_AlertLocationUnavailable = "Du gestattest NearbyWeather keinen Zugriff auf deinen Standtort. Somit können keine Daten für nahegelgene Wetter-Stationen geladen werden.";
 
 
 // MARK: - InfoTableViewController
