correct occurances of simple weather

--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 /*
  Localizable.strings
- SimpleWeather
+ NearbyWeather
  
  Created by Erik Maximilian Martens on 03.12.16.
  Copyright © 2016 Erik Maximilian Martens. All rights reserved.
