--- a/NearbyWeather/Base.lproj/Localizable.strings
+++ b/NearbyWeather/Base.lproj/Localizable.strings
@@ -79,6 +79,9 @@ SettingsTVC_BackButtonTitle = "Weather";
 
 SettingsTVC_NavigationBarTitle = "Settings";
 
+SettingsTVC_About = "About";
+
+SettingsTVC_SectionTitle0 = "General";
 SettingsTVC_SectionTitle1 = "Favorited City";
 SettingsTVC_SectionTitle2 = "Open Weather Map API Key";
 SettingsTVC_SectionTitle3 = "Amount of Search Results";
