--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -79,6 +79,9 @@ SettingsTVC_BackButtonTitle = "Wetter";
 
 SettingsTVC_NavigationBarTitle = "Einstellungen";
 
+SettingsTVC_About = "Über";
+
+SettingsTVC_SectionTitle0 = "Allgemein";
 SettingsTVC_SectionTitle1 = "Favorisierte Stadt";
 SettingsTVC_SectionTitle2 = "Open Weather Map API Schlüssel";
 SettingsTVC_SectionTitle3 = "Anzahl der Such-Ergebnisse";
