--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -49,6 +49,11 @@ LocationsListTVC_AlertIncorrectFavoritedCity = "Es konnte keine Daten für die e
 LocationsListTVC_AlertLocationUnavailable = "Du gestattest NearbyWeather keinen Zugriff auf deinen Standtort. Somit können keine Daten für nahegelgene Wetter-Stationen geladen werden.";
 
 
+// MARK: - WeatherDetailViewController
+
+WeatherDetailVC_DistanceFrom = "Entfernung: %@";
+
+
 // MARK: - NearbyLocationsMapViewController
 
 NearbyLocationsMapVC_NavigationItemTitle = "Stations-Standorte";
@@ -114,7 +119,7 @@ SettingsTVC_SectionTitle1 = "Favorisierte Stadt";
 SettingsTVC_SectionTitle2 = "Open Weather Map API Schlüssel";
 SettingsTVC_SectionTitle3 = "Anzahl der Such-Ergebnisse";
 SettingsTVC_SectionTitle4 = "Temperatur Einheit";
-SettingsTVC_SectionTitle5 = "Windgeschwindigkeits-Einheit";
+SettingsTVC_SectionTitle5 = "Geschwindigkeits/Entfernungs-Einheit";
 
 SettingsTVC_Results = "Ergebnisse";
 SettingsTVC_RefreshOnAppStart = "Beim App Start Aktualisieren";
@@ -140,5 +145,11 @@ OpenWeatherMapCityFilterTVC_SearchBarPlaceholder = "Suche nach Städtenamen";
 kilometres_per_hour = "Kilometer/Stunde";
 miles_per_hour = "Meilen/Stunde";
 
+kilometres = "Kilometer";
+miles = "Meilen";
+
 kph = "kp/h";
 mph = "m/h";
+
+km = "km";
+mi = "mi";
