--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -58,6 +58,9 @@ WeatherDetailVC_CloudCoverage = "Wolkenbedeckung";
 WeatherDetailVC_Humidity = "Luftfeuchtigkeit";
 WeatherDetailVC_Pressure = "Luftdruck";
 
+WeatherDetailVC_WindSpeed = "Windgeschwindigkeit";
+WeatherDetailVC_WindDirection = "Windrichtung";
+
 WeatherDetailVC_Coordinates = "Koordinaten";
 WeatherDetailVC_DistanceFrom = "Entfernung";
 
